# VoDiGrEx

./: .gitignore  CMakeLists.txt  README.md  vodigrex-config.cmake
Test/: partial_image_voronoi.cpp  test_building.cpp  test_evacuation.cpp  test_graph_corner.cpp  test_line_doors.cpp  test_line_follower.cpp  test_line_graph.cpp  test_multi.cpp  test_multi_doors.cpp
include/: CMakeLists.txt
include/Evg_thin/: ImageHelper.hh  evg-thin.cc  evg-thin.d  evg-thin.hh  intel-map-binary2.pgm  intel-map-binary2_skeleton.ppm  intel-map.pgm  intel-map_skeleton.ppm  kth_line.pgm  kth_line_skeleton.ppm  test.cc  test.d  test1_skeleton.ppm
include/LineFollower/: DynamicGraphExtractor.hpp  LineFollower.cpp  LineFollower.hpp  LineFollowerDoors.hpp  LineFollowerDoors.tpl  LineFollowerGraph.hpp  LineFollowerGraph.tpl  MultipleLineFollower.hpp  MultipleLineFollowerKeypoints.hpp  SimpleNode.hpp
include/Utils/: Utils.hpp
include/VoronoiDiagram/: Thinker.hpp  ThinkerVoronoi.cpp  Util.hpp
include/linefollower/: DynamicGraphExtractor.hpp  LineFollower.cpp  LineFollower.hpp  LineFollowerGraph.hpp  LineFollowerGraph.tpl  LineFollowerGraphCorners.hpp  MultipleLineFollower.hpp  MultipleLineFollowerBase.hpp  MultipleLineFollowerKeypoints.hpp  SimpleNode.hpp  SimpleNodeNamed.hpp
include/utils/: Utils.hpp
include/voronoidiagram/: ThinkerEVG.cpp  ThinkerEVG.hpp  ThinkerVoronoi.cpp  ThinkerVoronoi.hpp
includes/: CMakeLists.txt
includes/LineFollower/: AttributeMaker.hpp  DynamicGraphExtractor.hpp  Global.hpp  GraphList.hpp  LineFollower.cpp  LineFollower.hpp  LineFollowerDoors.hpp  LineFollowerDoors.tpl  LineFollowerGraph.hpp  LineFollowerGraph.tpl  MultipleLineFollower.hpp  SimpleNode.hpp
includes/Utils/: Utils.hpp
includes/VoronoiDiagram/: Thinker.hpp  ThinkerVoronoi.hpp  Thinker_EVG.cpp  Thinker_EVG.hpp  Thinker_Voronoi.cpp  Thinker_Voronoi.hpp  Util.hpp
